# bootcamp_python

./: .gitignore  README.md  requirements.txt  utilities.py
final_proj/: README.md  main.py  requirements.txt
final_proj/api/: __init__.py
final_proj/config/: __init__.py
final_proj/database/: __init__.py
final_proj/models/: __init__.py
modulo1/clase1/: ejercicios.md
modulo1/clase2/: clase2.py  test_clase2.py
modulo1/clase3/: clase3.py  test_clase3.py
modulo1/clase4/: clase4.py
modulo2/clase5/: clase5.py  test_clase5.py
modulo3/clase6/: clase6.py  test_clase6.py
proyecto_final/: .env.example  Procfile  README.md  main.py  mod.py  pyproject.toml  requirements.txt  utils.py
proyecto_final/README/: AppRequirements.md  CLASE_10.md  CLASE_11.md  CLASE_12.md  CLASE_8.md  CLASE_9.md
proyecto_final/api/: __common_deps.py
proyecto_final/api/config/: __base_config.py  __init__.py  authentication.py  database.py  security.py
proyecto_final/api/database/: __base.py  __init__.py  products.py
proyecto_final/api/models/: __init__.py  orders.py  products.py  users.py
proyecto_final/api/routes/: __init__.py  auth.py  orders.py  products.py  users.py
proyecto_final/api/services/: __init__.py  auth.py  orders.py  products.py  users.py
proyecto_final/models/: products.py
proyecto_final/routes/: products.py
proyecto_final/scripts/: ADMIN_USER_CONF.example  __init__.py  create_super_user.py  init_db_collections.py  seed_database.py
proyecto_final/static/: styles.css
proyecto_final/templates/: index.html
proyecto_final/tests/: test_utils.py
(+5 files in other folders)
