[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = "Las bases para la creación de una API de un \"eCommerce\" de ejemplo"
authors = ["Sarctiann <sebas.sarc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pymongo = {extras = ["srv"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
